parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block
Rule 1     block -> stmt block
Rule 2     block -> stmt
Rule 3     stmt -> simpstmt ;
Rule 4     stmt -> flowctrl
Rule 5     stmt -> stmtprint ;
Rule 6     simpstmt -> INT ID = numexpr
Rule 7     simpstmt -> FLOAT ID = numexpr
Rule 8     simpstmt -> INT ID
Rule 9     simpstmt -> FLOAT ID
Rule 10    simpstmt -> BOOLEAN ID
Rule 11    simpstmt -> STRING ID
Rule 12    simpstmt -> ID = expr
Rule 13    expr -> numexpr
Rule 14    expr -> boolexpr
Rule 15    flowctrl -> IF ( boolexpr ) { block } elif else
Rule 16    elif -> ELIF ( boolexpr ) { block } elif
Rule 17    elif -> empty
Rule 18    else -> ELSE { block }
Rule 19    else -> empty
Rule 20    numexpr -> num
Rule 21    numexpr -> numexpr arit numexpr
Rule 22    numexpr -> ID + numexpr
Rule 23    numexpr -> ID * numexpr
Rule 24    numexpr -> ID - numexpr
Rule 25    numexpr -> ID / numexpr
Rule 26    numexpr -> ID ^ numexpr
Rule 27    numexpr -> ( numexpr )
Rule 28    num -> NUMI
Rule 29    num -> NUMF
Rule 30    num -> ID
Rule 31    num -> - NUMI
Rule 32    num -> - NUMF
Rule 33    num -> - ID
Rule 34    arit -> +
Rule 35    arit -> -
Rule 36    arit -> *
Rule 37    arit -> /
Rule 38    arit -> ^
Rule 39    boolexpr -> boolexpr AND boolexpr
Rule 40    boolexpr -> boolexpr OR boolexpr
Rule 41    boolexpr -> boolexpr EQUALS boolexpr
Rule 42    boolexpr -> boolexpr NOTEQUALS boolexpr
Rule 43    boolexpr -> ID EQUALS numexpr
Rule 44    boolexpr -> ID NOTEQUALS numexpr
Rule 45    boolexpr -> ID GTREAQTHAN numexpr
Rule 46    boolexpr -> ID LSSEQTHAN numexpr
Rule 47    boolexpr -> ID < numexpr
Rule 48    boolexpr -> ID > numexpr
Rule 49    boolexpr -> ID EQUALS boolexpr
Rule 50    boolexpr -> ID NOTEQUALS boolexpr
Rule 51    boolexpr -> boolop
Rule 52    boolexpr -> ( boolexpr )
Rule 53    boolop -> numcomp
Rule 54    boolop -> bool
Rule 55    bool -> TRUE
Rule 56    bool -> FALSE
Rule 57    bool -> ID
Rule 58    numcomp -> numexpr comp numexpr
Rule 59    comp -> EQUALS
Rule 60    comp -> NOTEQUALS
Rule 61    comp -> GTREAQTHAN
Rule 62    comp -> LSSEQTHAN
Rule 63    comp -> <
Rule 64    comp -> >
Rule 65    stmtprint -> PRINT ( expr )
Rule 66    empty -> <empty>

Terminals, with rules where they appear

(                    : 15 16 27 52 65
)                    : 15 16 27 52 65
*                    : 23 36
+                    : 22 34
-                    : 24 31 32 33 35
/                    : 25 37
;                    : 3 5
<                    : 47 63
=                    : 6 7 12
>                    : 48 64
AND                  : 39
BOOLEAN              : 10
ELIF                 : 16
ELSE                 : 18
EQUALS               : 41 43 49 59
FALSE                : 56
FLOAT                : 7 9
GTREAQTHAN           : 45 61
ID                   : 6 7 8 9 10 11 12 22 23 24 25 26 30 33 43 44 45 46 47 48 49 50 57
IF                   : 15
INT                  : 6 8
LSSEQTHAN            : 46 62
NOTEQUALS            : 42 44 50 60
NUMF                 : 29 32
NUMI                 : 28 31
OR                   : 40
PRINT                : 65
STRING               : 11
TRUE                 : 55
^                    : 26 38
error                : 
{                    : 15 16 18
}                    : 15 16 18

Nonterminals, with rules where they appear

arit                 : 21
block                : 1 15 16 18 0
bool                 : 54
boolexpr             : 14 15 16 39 39 40 40 41 41 42 42 49 50 52
boolop               : 51
comp                 : 58
elif                 : 15 16
else                 : 15
empty                : 17 19
expr                 : 12 65
flowctrl             : 4
num                  : 20
numcomp              : 53
numexpr              : 6 7 13 21 21 22 23 24 25 26 27 43 44 45 46 47 48 58 58
simpstmt             : 3
stmt                 : 1 2
stmtprint            : 5

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . stmt block
    (2) block -> . stmt
    (3) stmt -> . simpstmt ;
    (4) stmt -> . flowctrl
    (5) stmt -> . stmtprint ;
    (6) simpstmt -> . INT ID = numexpr
    (7) simpstmt -> . FLOAT ID = numexpr
    (8) simpstmt -> . INT ID
    (9) simpstmt -> . FLOAT ID
    (10) simpstmt -> . BOOLEAN ID
    (11) simpstmt -> . STRING ID
    (12) simpstmt -> . ID = expr
    (15) flowctrl -> . IF ( boolexpr ) { block } elif else
    (65) stmtprint -> . PRINT ( expr )

    INT             shift and go to state 6
    FLOAT           shift and go to state 8
    BOOLEAN         shift and go to state 9
    STRING          shift and go to state 10
    ID              shift and go to state 7
    IF              shift and go to state 11
    PRINT           shift and go to state 12

    block                          shift and go to state 1
    stmt                           shift and go to state 2
    simpstmt                       shift and go to state 3
    flowctrl                       shift and go to state 4
    stmtprint                      shift and go to state 5

state 1

    (0) S' -> block .



state 2

    (1) block -> stmt . block
    (2) block -> stmt .
    (1) block -> . stmt block
    (2) block -> . stmt
    (3) stmt -> . simpstmt ;
    (4) stmt -> . flowctrl
    (5) stmt -> . stmtprint ;
    (6) simpstmt -> . INT ID = numexpr
    (7) simpstmt -> . FLOAT ID = numexpr
    (8) simpstmt -> . INT ID
    (9) simpstmt -> . FLOAT ID
    (10) simpstmt -> . BOOLEAN ID
    (11) simpstmt -> . STRING ID
    (12) simpstmt -> . ID = expr
    (15) flowctrl -> . IF ( boolexpr ) { block } elif else
    (65) stmtprint -> . PRINT ( expr )

    $end            reduce using rule 2 (block -> stmt .)
    }               reduce using rule 2 (block -> stmt .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 8
    BOOLEAN         shift and go to state 9
    STRING          shift and go to state 10
    ID              shift and go to state 7
    IF              shift and go to state 11
    PRINT           shift and go to state 12

    stmt                           shift and go to state 2
    block                          shift and go to state 13
    simpstmt                       shift and go to state 3
    flowctrl                       shift and go to state 4
    stmtprint                      shift and go to state 5

state 3

    (3) stmt -> simpstmt . ;

    ;               shift and go to state 14


state 4

    (4) stmt -> flowctrl .

    INT             reduce using rule 4 (stmt -> flowctrl .)
    FLOAT           reduce using rule 4 (stmt -> flowctrl .)
    BOOLEAN         reduce using rule 4 (stmt -> flowctrl .)
    STRING          reduce using rule 4 (stmt -> flowctrl .)
    ID              reduce using rule 4 (stmt -> flowctrl .)
    IF              reduce using rule 4 (stmt -> flowctrl .)
    PRINT           reduce using rule 4 (stmt -> flowctrl .)
    $end            reduce using rule 4 (stmt -> flowctrl .)
    }               reduce using rule 4 (stmt -> flowctrl .)


state 5

    (5) stmt -> stmtprint . ;

    ;               shift and go to state 15


state 6

    (6) simpstmt -> INT . ID = numexpr
    (8) simpstmt -> INT . ID

    ID              shift and go to state 16


state 7

    (12) simpstmt -> ID . = expr

    =               shift and go to state 17


state 8

    (7) simpstmt -> FLOAT . ID = numexpr
    (9) simpstmt -> FLOAT . ID

    ID              shift and go to state 18


state 9

    (10) simpstmt -> BOOLEAN . ID

    ID              shift and go to state 19


state 10

    (11) simpstmt -> STRING . ID

    ID              shift and go to state 20


state 11

    (15) flowctrl -> IF . ( boolexpr ) { block } elif else

    (               shift and go to state 21


state 12

    (65) stmtprint -> PRINT . ( expr )

    (               shift and go to state 22


state 13

    (1) block -> stmt block .

    $end            reduce using rule 1 (block -> stmt block .)
    }               reduce using rule 1 (block -> stmt block .)


state 14

    (3) stmt -> simpstmt ; .

    INT             reduce using rule 3 (stmt -> simpstmt ; .)
    FLOAT           reduce using rule 3 (stmt -> simpstmt ; .)
    BOOLEAN         reduce using rule 3 (stmt -> simpstmt ; .)
    STRING          reduce using rule 3 (stmt -> simpstmt ; .)
    ID              reduce using rule 3 (stmt -> simpstmt ; .)
    IF              reduce using rule 3 (stmt -> simpstmt ; .)
    PRINT           reduce using rule 3 (stmt -> simpstmt ; .)
    $end            reduce using rule 3 (stmt -> simpstmt ; .)
    }               reduce using rule 3 (stmt -> simpstmt ; .)


state 15

    (5) stmt -> stmtprint ; .

    INT             reduce using rule 5 (stmt -> stmtprint ; .)
    FLOAT           reduce using rule 5 (stmt -> stmtprint ; .)
    BOOLEAN         reduce using rule 5 (stmt -> stmtprint ; .)
    STRING          reduce using rule 5 (stmt -> stmtprint ; .)
    ID              reduce using rule 5 (stmt -> stmtprint ; .)
    IF              reduce using rule 5 (stmt -> stmtprint ; .)
    PRINT           reduce using rule 5 (stmt -> stmtprint ; .)
    $end            reduce using rule 5 (stmt -> stmtprint ; .)
    }               reduce using rule 5 (stmt -> stmtprint ; .)


state 16

    (6) simpstmt -> INT ID . = numexpr
    (8) simpstmt -> INT ID .

    =               shift and go to state 23
    ;               reduce using rule 8 (simpstmt -> INT ID .)


state 17

    (12) simpstmt -> ID = . expr
    (13) expr -> . numexpr
    (14) expr -> . boolexpr
    (20) numexpr -> . num
    (21) numexpr -> . numexpr arit numexpr
    (22) numexpr -> . ID + numexpr
    (23) numexpr -> . ID * numexpr
    (24) numexpr -> . ID - numexpr
    (25) numexpr -> . ID / numexpr
    (26) numexpr -> . ID ^ numexpr
    (27) numexpr -> . ( numexpr )
    (39) boolexpr -> . boolexpr AND boolexpr
    (40) boolexpr -> . boolexpr OR boolexpr
    (41) boolexpr -> . boolexpr EQUALS boolexpr
    (42) boolexpr -> . boolexpr NOTEQUALS boolexpr
    (43) boolexpr -> . ID EQUALS numexpr
    (44) boolexpr -> . ID NOTEQUALS numexpr
    (45) boolexpr -> . ID GTREAQTHAN numexpr
    (46) boolexpr -> . ID LSSEQTHAN numexpr
    (47) boolexpr -> . ID < numexpr
    (48) boolexpr -> . ID > numexpr
    (49) boolexpr -> . ID EQUALS boolexpr
    (50) boolexpr -> . ID NOTEQUALS boolexpr
    (51) boolexpr -> . boolop
    (52) boolexpr -> . ( boolexpr )
    (28) num -> . NUMI
    (29) num -> . NUMF
    (30) num -> . ID
    (31) num -> . - NUMI
    (32) num -> . - NUMF
    (33) num -> . - ID
    (53) boolop -> . numcomp
    (54) boolop -> . bool
    (58) numcomp -> . numexpr comp numexpr
    (55) bool -> . TRUE
    (56) bool -> . FALSE
    (57) bool -> . ID

    ID              shift and go to state 24
    (               shift and go to state 30
    NUMI            shift and go to state 32
    NUMF            shift and go to state 33
    -               shift and go to state 29
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    expr                           shift and go to state 25
    numexpr                        shift and go to state 26
    boolexpr                       shift and go to state 27
    num                            shift and go to state 28
    boolop                         shift and go to state 31
    numcomp                        shift and go to state 34
    bool                           shift and go to state 35

state 18

    (7) simpstmt -> FLOAT ID . = numexpr
    (9) simpstmt -> FLOAT ID .

    =               shift and go to state 38
    ;               reduce using rule 9 (simpstmt -> FLOAT ID .)


state 19

    (10) simpstmt -> BOOLEAN ID .

    ;               reduce using rule 10 (simpstmt -> BOOLEAN ID .)


state 20

    (11) simpstmt -> STRING ID .

    ;               reduce using rule 11 (simpstmt -> STRING ID .)


state 21

    (15) flowctrl -> IF ( . boolexpr ) { block } elif else
    (39) boolexpr -> . boolexpr AND boolexpr
    (40) boolexpr -> . boolexpr OR boolexpr
    (41) boolexpr -> . boolexpr EQUALS boolexpr
    (42) boolexpr -> . boolexpr NOTEQUALS boolexpr
    (43) boolexpr -> . ID EQUALS numexpr
    (44) boolexpr -> . ID NOTEQUALS numexpr
    (45) boolexpr -> . ID GTREAQTHAN numexpr
    (46) boolexpr -> . ID LSSEQTHAN numexpr
    (47) boolexpr -> . ID < numexpr
    (48) boolexpr -> . ID > numexpr
    (49) boolexpr -> . ID EQUALS boolexpr
    (50) boolexpr -> . ID NOTEQUALS boolexpr
    (51) boolexpr -> . boolop
    (52) boolexpr -> . ( boolexpr )
    (53) boolop -> . numcomp
    (54) boolop -> . bool
    (58) numcomp -> . numexpr comp numexpr
    (55) bool -> . TRUE
    (56) bool -> . FALSE
    (57) bool -> . ID
    (20) numexpr -> . num
    (21) numexpr -> . numexpr arit numexpr
    (22) numexpr -> . ID + numexpr
    (23) numexpr -> . ID * numexpr
    (24) numexpr -> . ID - numexpr
    (25) numexpr -> . ID / numexpr
    (26) numexpr -> . ID ^ numexpr
    (27) numexpr -> . ( numexpr )
    (28) num -> . NUMI
    (29) num -> . NUMF
    (30) num -> . ID
    (31) num -> . - NUMI
    (32) num -> . - NUMF
    (33) num -> . - ID

    ID              shift and go to state 41
    (               shift and go to state 39
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37
    NUMI            shift and go to state 32
    NUMF            shift and go to state 33
    -               shift and go to state 29

    boolexpr                       shift and go to state 40
    numexpr                        shift and go to state 42
    boolop                         shift and go to state 31
    numcomp                        shift and go to state 34
    bool                           shift and go to state 35
    num                            shift and go to state 28

state 22

    (65) stmtprint -> PRINT ( . expr )
    (13) expr -> . numexpr
    (14) expr -> . boolexpr
    (20) numexpr -> . num
    (21) numexpr -> . numexpr arit numexpr
    (22) numexpr -> . ID + numexpr
    (23) numexpr -> . ID * numexpr
    (24) numexpr -> . ID - numexpr
    (25) numexpr -> . ID / numexpr
    (26) numexpr -> . ID ^ numexpr
    (27) numexpr -> . ( numexpr )
    (39) boolexpr -> . boolexpr AND boolexpr
    (40) boolexpr -> . boolexpr OR boolexpr
    (41) boolexpr -> . boolexpr EQUALS boolexpr
    (42) boolexpr -> . boolexpr NOTEQUALS boolexpr
    (43) boolexpr -> . ID EQUALS numexpr
    (44) boolexpr -> . ID NOTEQUALS numexpr
    (45) boolexpr -> . ID GTREAQTHAN numexpr
    (46) boolexpr -> . ID LSSEQTHAN numexpr
    (47) boolexpr -> . ID < numexpr
    (48) boolexpr -> . ID > numexpr
    (49) boolexpr -> . ID EQUALS boolexpr
    (50) boolexpr -> . ID NOTEQUALS boolexpr
    (51) boolexpr -> . boolop
    (52) boolexpr -> . ( boolexpr )
    (28) num -> . NUMI
    (29) num -> . NUMF
    (30) num -> . ID
    (31) num -> . - NUMI
    (32) num -> . - NUMF
    (33) num -> . - ID
    (53) boolop -> . numcomp
    (54) boolop -> . bool
    (58) numcomp -> . numexpr comp numexpr
    (55) bool -> . TRUE
    (56) bool -> . FALSE
    (57) bool -> . ID

    ID              shift and go to state 24
    (               shift and go to state 30
    NUMI            shift and go to state 32
    NUMF            shift and go to state 33
    -               shift and go to state 29
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    expr                           shift and go to state 43
    numexpr                        shift and go to state 26
    boolexpr                       shift and go to state 27
    num                            shift and go to state 28
    boolop                         shift and go to state 31
    numcomp                        shift and go to state 34
    bool                           shift and go to state 35

state 23

    (6) simpstmt -> INT ID = . numexpr
    (20) numexpr -> . num
    (21) numexpr -> . numexpr arit numexpr
    (22) numexpr -> . ID + numexpr
    (23) numexpr -> . ID * numexpr
    (24) numexpr -> . ID - numexpr
    (25) numexpr -> . ID / numexpr
    (26) numexpr -> . ID ^ numexpr
    (27) numexpr -> . ( numexpr )
    (28) num -> . NUMI
    (29) num -> . NUMF
    (30) num -> . ID
    (31) num -> . - NUMI
    (32) num -> . - NUMF
    (33) num -> . - ID

    ID              shift and go to state 44
    (               shift and go to state 46
    NUMI            shift and go to state 32
    NUMF            shift and go to state 33
    -               shift and go to state 29

    numexpr                        shift and go to state 45
    num                            shift and go to state 28

state 24

    (22) numexpr -> ID . + numexpr
    (23) numexpr -> ID . * numexpr
    (24) numexpr -> ID . - numexpr
    (25) numexpr -> ID . / numexpr
    (26) numexpr -> ID . ^ numexpr
    (43) boolexpr -> ID . EQUALS numexpr
    (44) boolexpr -> ID . NOTEQUALS numexpr
    (45) boolexpr -> ID . GTREAQTHAN numexpr
    (46) boolexpr -> ID . LSSEQTHAN numexpr
    (47) boolexpr -> ID . < numexpr
    (48) boolexpr -> ID . > numexpr
    (49) boolexpr -> ID . EQUALS boolexpr
    (50) boolexpr -> ID . NOTEQUALS boolexpr
    (30) num -> ID .
    (57) bool -> ID .

  ! shift/reduce conflict for + resolved as shift
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for / resolved as shift
  ! shift/reduce conflict for ^ resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for NOTEQUALS resolved as shift
  ! shift/reduce conflict for GTREAQTHAN resolved as shift
  ! shift/reduce conflict for LSSEQTHAN resolved as shift
  ! shift/reduce conflict for < resolved as shift
  ! shift/reduce conflict for > resolved as shift
  ! reduce/reduce conflict for AND resolved using rule 30 (num -> ID .)
  ! reduce/reduce conflict for OR resolved using rule 30 (num -> ID .)
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for NOTEQUALS resolved as shift
  ! reduce/reduce conflict for ; resolved using rule 30 (num -> ID .)
  ! reduce/reduce conflict for ) resolved using rule 30 (num -> ID .)
    +               shift and go to state 47
    *               shift and go to state 48
    -               shift and go to state 49
    /               shift and go to state 50
    ^               shift and go to state 51
    EQUALS          shift and go to state 52
    NOTEQUALS       shift and go to state 53
    GTREAQTHAN      shift and go to state 54
    LSSEQTHAN       shift and go to state 55
    <               shift and go to state 56
    >               shift and go to state 57
    ;               reduce using rule 30 (num -> ID .)
    )               reduce using rule 30 (num -> ID .)
    AND             reduce using rule 30 (num -> ID .)
    OR              reduce using rule 30 (num -> ID .)

  ! +               [ reduce using rule 30 (num -> ID .) ]
  ! -               [ reduce using rule 30 (num -> ID .) ]
  ! *               [ reduce using rule 30 (num -> ID .) ]
  ! /               [ reduce using rule 30 (num -> ID .) ]
  ! ^               [ reduce using rule 30 (num -> ID .) ]
  ! EQUALS          [ reduce using rule 30 (num -> ID .) ]
  ! NOTEQUALS       [ reduce using rule 30 (num -> ID .) ]
  ! GTREAQTHAN      [ reduce using rule 30 (num -> ID .) ]
  ! LSSEQTHAN       [ reduce using rule 30 (num -> ID .) ]
  ! <               [ reduce using rule 30 (num -> ID .) ]
  ! >               [ reduce using rule 30 (num -> ID .) ]
  ! AND             [ reduce using rule 57 (bool -> ID .) ]
  ! OR              [ reduce using rule 57 (bool -> ID .) ]
  ! EQUALS          [ reduce using rule 57 (bool -> ID .) ]
  ! NOTEQUALS       [ reduce using rule 57 (bool -> ID .) ]
  ! ;               [ reduce using rule 57 (bool -> ID .) ]
  ! )               [ reduce using rule 57 (bool -> ID .) ]


state 25

    (12) simpstmt -> ID = expr .

    ;               reduce using rule 12 (simpstmt -> ID = expr .)


state 26

    (13) expr -> numexpr .
    (21) numexpr -> numexpr . arit numexpr
    (58) numcomp -> numexpr . comp numexpr
    (34) arit -> . +
    (35) arit -> . -
    (36) arit -> . *
    (37) arit -> . /
    (38) arit -> . ^
    (59) comp -> . EQUALS
    (60) comp -> . NOTEQUALS
    (61) comp -> . GTREAQTHAN
    (62) comp -> . LSSEQTHAN
    (63) comp -> . <
    (64) comp -> . >

    ;               reduce using rule 13 (expr -> numexpr .)
    )               reduce using rule 13 (expr -> numexpr .)
    +               shift and go to state 60
    -               shift and go to state 61
    *               shift and go to state 62
    /               shift and go to state 63
    ^               shift and go to state 64
    EQUALS          shift and go to state 65
    NOTEQUALS       shift and go to state 66
    GTREAQTHAN      shift and go to state 67
    LSSEQTHAN       shift and go to state 68
    <               shift and go to state 69
    >               shift and go to state 70

    arit                           shift and go to state 58
    comp                           shift and go to state 59

state 27

    (14) expr -> boolexpr .
    (39) boolexpr -> boolexpr . AND boolexpr
    (40) boolexpr -> boolexpr . OR boolexpr
    (41) boolexpr -> boolexpr . EQUALS boolexpr
    (42) boolexpr -> boolexpr . NOTEQUALS boolexpr

    ;               reduce using rule 14 (expr -> boolexpr .)
    )               reduce using rule 14 (expr -> boolexpr .)
    AND             shift and go to state 71
    OR              shift and go to state 72
    EQUALS          shift and go to state 73
    NOTEQUALS       shift and go to state 74


state 28

    (20) numexpr -> num .

    +               reduce using rule 20 (numexpr -> num .)
    -               reduce using rule 20 (numexpr -> num .)
    *               reduce using rule 20 (numexpr -> num .)
    /               reduce using rule 20 (numexpr -> num .)
    ^               reduce using rule 20 (numexpr -> num .)
    EQUALS          reduce using rule 20 (numexpr -> num .)
    NOTEQUALS       reduce using rule 20 (numexpr -> num .)
    GTREAQTHAN      reduce using rule 20 (numexpr -> num .)
    LSSEQTHAN       reduce using rule 20 (numexpr -> num .)
    <               reduce using rule 20 (numexpr -> num .)
    >               reduce using rule 20 (numexpr -> num .)
    ;               reduce using rule 20 (numexpr -> num .)
    )               reduce using rule 20 (numexpr -> num .)
    AND             reduce using rule 20 (numexpr -> num .)
    OR              reduce using rule 20 (numexpr -> num .)


state 29

    (31) num -> - . NUMI
    (32) num -> - . NUMF
    (33) num -> - . ID

    NUMI            shift and go to state 75
    NUMF            shift and go to state 76
    ID              shift and go to state 77


state 30

    (27) numexpr -> ( . numexpr )
    (52) boolexpr -> ( . boolexpr )
    (20) numexpr -> . num
    (21) numexpr -> . numexpr arit numexpr
    (22) numexpr -> . ID + numexpr
    (23) numexpr -> . ID * numexpr
    (24) numexpr -> . ID - numexpr
    (25) numexpr -> . ID / numexpr
    (26) numexpr -> . ID ^ numexpr
    (27) numexpr -> . ( numexpr )
    (39) boolexpr -> . boolexpr AND boolexpr
    (40) boolexpr -> . boolexpr OR boolexpr
    (41) boolexpr -> . boolexpr EQUALS boolexpr
    (42) boolexpr -> . boolexpr NOTEQUALS boolexpr
    (43) boolexpr -> . ID EQUALS numexpr
    (44) boolexpr -> . ID NOTEQUALS numexpr
    (45) boolexpr -> . ID GTREAQTHAN numexpr
    (46) boolexpr -> . ID LSSEQTHAN numexpr
    (47) boolexpr -> . ID < numexpr
    (48) boolexpr -> . ID > numexpr
    (49) boolexpr -> . ID EQUALS boolexpr
    (50) boolexpr -> . ID NOTEQUALS boolexpr
    (51) boolexpr -> . boolop
    (52) boolexpr -> . ( boolexpr )
    (28) num -> . NUMI
    (29) num -> . NUMF
    (30) num -> . ID
    (31) num -> . - NUMI
    (32) num -> . - NUMF
    (33) num -> . - ID
    (53) boolop -> . numcomp
    (54) boolop -> . bool
    (58) numcomp -> . numexpr comp numexpr
    (55) bool -> . TRUE
    (56) bool -> . FALSE
    (57) bool -> . ID

    ID              shift and go to state 24
    (               shift and go to state 30
    NUMI            shift and go to state 32
    NUMF            shift and go to state 33
    -               shift and go to state 29
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37
